26 Oct 2o17
* Update to retry to support jobs created with earlier plugin versions

25 Oct 2017
* Added (optional) command retry in the event of a license being unavailable
* Updated auto-update job to use all saved data from when multi-job was created
  (Won't work for previously created jobs that didn't save the data)

17 Oct 2017
* Added new auto-update multi-job to allow a scripted/scheduled job to
  perform a multi-job update. (Note that this may require username/password
  access to work)

26 Sept 2017
* Added support for new version of VectorCAST Manage with only 2 levels 
  (rather than previous 4 levels)

24 Jul 2017
* Changed groovyscript checks to mark VectorCAST build/execute errors as errors

16 Jul 2017
* Added extra check in vcastcsv2jenkins to cope with Function Calls being in
  header but not in the rest of the table

23 Jun 2017
* Added --force option to use of --release-locks
* Added option to use either HTML or TEXT format for the build description

6 Mar 2017
* add newlines at the end of single job scripts (windows and Linux) before the 
  teardown lines
* Corrected check for missing BUILD_URL environment variable

